# comlib

./: .gitignore  CMakeLists.txt  README.md
cmake/: arduino.cmake  generate_msgs.cmake
include/com/: comlib.h  communication.h  communication_interface.h  macros.h  message_callback_registry.h  message_deserialization_registry.h  stdx.h  stream_message_reader.h  utils.h
msg/: int32.msg  move.msg  move_path.msg
msg_generation/: codegeneration.rkt  main.rkt  message_generator.rkt  template.cpp  template.h  utils.rkt
src/: communication.cpp  communication.h  communication_interface.h  macros.h  message_callback_registry.cpp  message_deserialization_registry.cpp  messages.cpp  messages.h  mock_message_socket.cpp  mock_message_socket.h  serialization.cpp  stream_message_reader.cpp  stream_message_reader.h  stub.cpp  utils.cpp  utils.h
src/com/: comlib.h  communication.cpp  communication.h  communication_interface.h  i_message.h  macros.h  message_callback_registry.cpp  message_callback_registry.h  message_deserialization_registry.cpp  message_registry.cpp  message_registry.h  messages.cpp  messages.h  serialization.cpp  serialization.h  stdx.h  stream_message_reader.cpp  stream_message_reader.h  utils.cpp  utils.h
src/com/msg/: empty_message.cpp  empty_message.h  int32_message.cpp  int32_message.h  message_registry.cpp  message_registry.h  message_types.cpp  message_types.h  messages.cpp  messages.h  move_message.cpp  move_message.h
test/: CMakeLists.txt  communication.cpp  integration_tests_main.cpp  loopback_mock_message_socket.cpp  loopback_mock_message_socket.h  mock_message_socket.cpp  mock_message_socket.h  utils.cpp
test/integration_tests/: integration_tests_main.cpp
test/mocks/: mock_message_socket.cpp  mock_message_socket.h
test/unit_tests/: communication.cpp  mock_message_socket.cpp  serialization.cpp  stdx.cpp  stream_message_reader.cpp  utils.cpp
